# minishop

./: db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_07_1326-e94eb34386e0_create_products_table.py  2025_07_07_1348-8ee8423b12f5_create_users_table.py  2025_07_07_1553-4422b1dbea2f_create_posts_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  view.py
core/: config.py
core/models/: __init__.py  base.py  db_healper.py  post.py  product.py  user.py
users/: crud.py  schemas.py  views.py
